Fix white comments when in dark mode

--- a/src/blog/assets/css/darkmode.scss
+++ b/src/blog/assets/css/darkmode.scss
@@ -22,6 +22,12 @@
     .single-post {
         .author-card {
             @extend .bg-dark;
+            border-color: grey;
+        }
+
+        .post-comment {
+            @extend .bg-dark;
+            border-color: grey;
         }
     }
 
